fix: z-index for modal box (overlay)

--- a/christmas-shop/src/sass/base/_modal_card.scss
+++ b/christmas-shop/src/sass/base/_modal_card.scss
@@ -17,7 +17,7 @@
     opacity: 0;
     visibility: hidden;
 
-    // z-index: 10;
+    z-index: 100;
 
     &.visible {
         opacity: 1;
